[gd_scene load_steps=5 format=3 uid="uid://ocadb3abtapj"]

[ext_resource type="Texture2D" uid="uid://bxfb800nf40s2" path="res://assents/sprites/arrow_left.png" id="1_6e4pk"]
[ext_resource type="Script" uid="uid://ilpddrvgl05" path="res://scripts/touch_controls.gd" id="1_notdv"]
[ext_resource type="Texture2D" uid="uid://cgx1q0y5grekk" path="res://assents/sprites/arrow_right.png" id="2_notdv"]
[ext_resource type="Texture2D" uid="uid://b3hrrp762g74" path="res://assents/sprites/jump_icon.png" id="3_c1tq5"]

[node name="TouchControls" type="CanvasLayer"]
visible = false
script = ExtResource("1_notdv")

[node name="ButtonLeft" type="TouchScreenButton" parent="."]
position = Vector2(5, 347)
texture_normal = ExtResource("1_6e4pk")
action = "move_left"

[node name="ButtonRight" type="TouchScreenButton" parent="."]
position = Vector2(236, 348)
texture_normal = ExtResource("2_notdv")
action = "move_right"

[node name="ButtonJump" type="TouchScreenButton" parent="."]
position = Vector2(827, 313)
texture_normal = ExtResource("3_c1tq5")
action = "jump"

[node name="ButtonAction" type="TouchScreenButton" parent="."]
